# ClinAI

./: =2.0  ClinAI_Colab_Ready.py  ClinAI_Colab_Setup.md  README.md  VectorDB.ipynb  __init__.py  demo_output.json  example.py  parser.py  pyproject.toml  requirements.txt  run_pipeline.py  search.py  search_engine.py  test_chunking.py  test_chunking_simple.py  test_ingestion.py  vector_db.py
clinical_protocols/: I10.0.md  I11.0.md  I12.0.md  I13.0.md  I13.2.md  I15.0.md  I20.md  I21.md  I22.md  I47.1.md  I47.2.md  I48.md  I49.0.md  I49.4.md  I50.0.md  I50.1.md
config/: embeddings.yaml  validation_rules.yaml
data/chunks/: all_chunks.json
data/chunks/by_icd10/: I10.0_chunks.json  I11.0_chunks.json  I12.0_chunks.json  I13.0_chunks.json  I13.2_chunks.json  I15.0_chunks.json  I20.0_chunks.json  I47.1_chunks.json  I47.2_chunks.json  I48_chunks.json  I49.0_chunks.json  I49.4_chunks.json  I50.0_chunks.json  I50.1_chunks.json
data/chunks_simple/: all_chunks.json
data/chunks_simple/by_icd10/: I10.0.json  I11.0.json  I12.0.json  I13.0.json  I13.2.json  (+9 more)
data/processed/: protocols.json  validation_report.json
extractors/: __init__.py  base_extractor.py  image_extractor.py  pdf_extractor.py
src/chunking/: hierarchical_chunker.py  pipeline.py  simple_chunker.py
src/embeddings/: config.py  model_loader.py  pipeline.py
src/ingestion/: file_loader.py  json_collector.py  models.py  pipeline.py  validator.py  yaml_parser.py
src/models/: chunk.py
src/preprocessing/: medication_extractor.py  section_parser.py  text_normalizer.py
src/utils/: config.py  logger.py
(+14 files in other folders)
